<resources>
    <string-array name="main_widgets">
        <item>@string/widget_1</item>
        <item>@string/widget_2</item>
        <item>@string/widget_3</item>
        <item>@string/widget_4</item>
        <item>@string/widget_5</item>
        <item>@string/widget_7</item>
    </string-array>
    <string name="widget_1">Быстрый доступ</string>
    <string name="widget_2">Для вас</string>
    <string name="widget_3">Частые переводы</string>
    <string name="widget_4">Сохраненные платежи</string>
    <string name="widget_5">Курсы валют</string>
    <string name="widget_7">Вклад</string>
    <string name="app_name">Universalbank</string>
    <string name="network_security_function">Система безопасности сети</string>
    <string name="check_for_vpn">Проверить на VPN</string>
    <string name="please_turn_off_vpn">Пожалуйста, выключите VPN для дальнейшего использования приложения</string>
    <string name="products">Продукты</string>
    <string name="profile">Профиль</string>
    <string name="payments">Платежи</string>
    <string name="services">Услуги</string>
    <string name="chat">Чат</string>
    <string name="phone_number">Номер телефона</string>
    <string name="payment_amount">К оплате</string>
    <string name="input_code">Введите код</string>
    <string name="input_sms_code">Введите смс код</string>
    <string name="already_have_account">У вас уже есть аккаунт? Войти</string>
    <string name="input_password">Введите пароль</string>
    <string name="phone_number_prefix">+998</string>
    <string name="sent_to_phone">Отправлен на номер %1$s</string>
    <string name="choose_language">Выберите язык</string>
    <string name="choose_language_description">После регистрации вы можете изменить язык в настройках приложения</string>
    <string name="english">English</string>
    <string name="uzbek">O‘zbekcha</string>
    <string name="russian">Русский</string>
    <string name="sign_up">Регистрация</string>
    <string name="sign_up_description">Введите номер телефона для регистрации. Если у вас уже есть аккаунт, выполните вход</string>
    <string name="sign_in">Вход</string>
    <string name="sign_in_description">Введите номер телефона и пароль для входа в приложение</string>
    <string name="sign_up_privacy">Нажимая кнопку \"Продолжить\", Вы подтверждаете свое согласие с условиями <a href="https://ibank.ubank.uz/cib/default.htm">пользовательского соглашения</a></string>
    <string name="please_accept_privacy">Пожалуйста, примите все условия договора</string>
    <string name="verification_privacy">Я соглашаюсь с <a href="https://ibank.ubank.uz/cib/default.htm">условиями</a> Universal Bank </string>
    <string name="create_password">Создайте пароль</string>
    <string name="create_password_description">Создайте надежный и запоминающийся пароль для вас</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="error_no_internet_connection">Проблема с подключением к интернету, проверьте соединение</string>
    <string name="create_pin_code">Создайте PIN-код</string>
    <string name="enter_app_with_touch_id">Вход в приложение по отпечатку пальца</string>
    <string name="cancel">Отменить</string>
    <string name="confirm_pin_code">Подтвердите PIN-код</string>
    <string name="clear">Понятно</string>
    <string name="functions">Функции</string>
    <string name="min_password_length">В пароле должно быть не менее 8-ми символов</string>
    <string name="resend_code">Повторно отправить код</string>
    <string name="left_time">Повторно отправить код через %1$s</string>
    <string name="you_input_wrong_sms_code">Вы ввели неправильный код</string>
    <string name="wrong_sms_code_description">Попробуйте еще раз введен неверный код.Оставшееся количество попыток 2</string>
    <string name="enter_pin_code">Введите PIN-код</string>
    <string name="pass_description">В пароле должно быть не менее 8-ми символов</string>
    <string name="pass_dont_match">Пароли не совпадают</string>
    <string name="number_and_password">С помощью номера телефона и пароля</string>
    <string name="recover_with_mail">С помощью email</string>
    <string name="recover_with_identification">С помощью аутентификации</string>
    <string name="recover_with_card_number">С помощью карты</string>
    <string name="continue_registration">Продолжить регистрацию</string>
    <string name="you_already_have_account">У вас уже имеется аккаунт, хотите ли вы восстановить?</string>
    <string name="bank_products">Продукты банка</string>
    <string name="order_card">Заказать карту</string>
    <string name="apply_loan">Оформить кредит</string>
    <string name="open_deposit">Открыть вклад</string>
    <string name="open_wallet">Открыть кошелек</string>
    <string name="order_card_description">Заказывайте пластиковые карты без очереди</string>
    <string name="apply_loan_description">Оформите быстрый кредит не выходя из дома</string>
    <string name="open_deposit_description">Храните и копите ваши средства надежно и с выгодой!</string>
    <string name="open_wallet_description">Управляйте своими счетами легко и просто</string>
    <string name="add_saved_services">Добавляйте сервисы в избранное</string>
    <string name="real_services">Сервисы</string>
    <string name="conversion">Конверсия</string>
    <string name="check_debts">Задолженности</string>
    <string name="payment_in_places">Оплата на местах</string>
    <string name="transfer_to_account">Перевести на счет</string>
    <string name="money_transfers">Денежные переводы</string>
    <string name="qr_payment">Оплата по QR</string>
    <string name="connect_sms_info">Подключить HUMO SMS</string>
    <string name="humo_pay">HUMO PAY</string>
    <string name="enter_sms_code_from_mail">Введите код, полученный по</string>
    <string name="card_number">Номер карты</string>
    <string name="card_expire">Срок действия карты</string>
    <string name="wrong_card_expire_date">Введите правильный срок действия карты</string>
    <string name="change_password">Изменить пароль</string>
    <string name="old_password_is_wrong">Старый пароль неверный</string>
    <string name="old_password">Старый пароль</string>
    <string name="success_change_password">Пароль успешно изменён</string>
    <string name="skip">Пропустить</string>
    <string name="identify">Пройти</string>
    <string name="online_identification">Онлайн идентификация</string>
    <string name="identification_desc">Вы можете стать клиентом банка без посещения офиса</string>
    <string name="uzs_account">Сумовой счет</string>
    <string name="currency_account">Валютный счет</string>
    <string name="budget_payment">Оплата в бюджет</string>
    <string name="to_uzs_account">На сумовой счет</string>
    <string name="sample_string">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="fiz_mib">Физ.лицо</string>
    <string name="you_mib">Юр.лицо</string>
    <string name="receiver_mfo">Код банка получателя</string>
    <string name="receiver_account">Счет получателя</string>
    <string name="receiver_name">Наименование получателя</string>
    <string name="payment_details">Детали платежа</string>
    <string name="amount">Сумма</string>
    <string name="to_usd_account">На валютный счет</string>
    <string name="amount_in_dollar">Сумма (В долларах США)</string>
    <string name="receiver_account_budget">Счет получателя (25/27 знаков)</string>
    <string name="warning">Warning</string>
    <string name="this_is_last_attempt">Осталось последняя попытка ввода PIN-кода</string>
    <string name="too_many_attempts">Слишком много неудачных попыток</string>
    <string name="wrong_pin">Неверный PIN-код</string>
    <string name="connect_sms_notification">Включить SMS-уведомление \n(Humo)</string>
    <string name="input_card_number">Введите номер карты</string>
    <string name="bank_not_found">Банк не найден</string>
    <string name="commission_with_dots">Комиссия:</string>
    <string name="wrong_account_code">Неправильный счёт получателя</string>
    <string name="write_off_card">Карта списания</string>
    <string name="main_card">Основная карта</string>
    <string name="verification">Подтверждение</string>
    <string name="you_may_change_later">Если это не ваше данные, пройдите идентификацию заново </string>
    <string name="not_me">Это не мои данные</string>
    <string name="i_am">Верно,это я</string>
    <string name="citizenship">Гражданство</string>
    <string name="passport_no">Серия и номер документа</string>
    <string name="date_of_issue">Дата выдачи</string>
    <string name="date_of_expire">Дата окончания действия</string>
    <string name="successfully_verified">Ваша личность успешно подтверждена!</string>
    <string name="birth_date">Дата рождения</string>
    <string name="fio">Ф.И.О.</string>
    <string name="error_occurred">Произошла ошибка</string>
    <string name="congratulation">Поздравляем!</string>
    <string name="successful_verified">Ваша личность успешно подтверждена</string>
    <string name="money_transfer_history">История переводов</string>
    <string name="sender_country">Страна отправителя</string>
    <string name="city">Город</string>
    <string name="sender_phone_number">Телефон номер отправителя</string>
    <string name="home">Главная</string>
    <string name="transfer">Перевод</string>
    <string name="monday">Понедельник</string>
    <string name="tuesday">Вторник</string>
    <string name="wednesday">Среда</string>
    <string name="thursday">Четверг</string>
    <string name="friday">Пятница</string>
    <string name="saturday">Суббота</string>
    <string name="sunday">Воскресенье</string>
    <string name="monitoring">Мониторинг</string>
    <string name="card_damaged">Карта повреждена</string>
    <string name="name_changed">Измение имени или фамилии</string>
    <string name="card_lost">Кража или утеря</string>
    <string name="other_cause">Другая причина</string>
    <string name="card_expired">Срок карты истёк</string>
    <string name="my_deposits">Мои вклады</string>
    <string name="my_credits">Мои кредиты</string>
    <string name="get_credit">Получить кредит</string>
    <string name="no_deposits">У вас нет вкладов</string>
    <string name="you_can_open_deposit_by_clicking">Вы можете открыть вклад, нажав кнопку ниже</string>
    <string name="no_credits">У вас нет кредитов</string>
    <string name="percents">Проценты</string>
    <string name="deposit_edit">Переименовать депозит</string>
    <string name="early_closing_of_the_deposit">Досрочное закрытие вклад</string>
    <string name="close_deposit">Закрыть вклад</string>
    <string name="weekly">Еженедельно</string>
    <string name="month_6">6 месяцев</string>
    <string name="month_24">24 месяца</string>
    <string name="month_18">18 месяцев</string>
    <string name="month_12">12 месяцев</string>
    <string name="unlimited">Неограниченный</string>
    <string name="custom_term">Другой срок\n</string>
    <string name="deposit">Вклад</string>
    <string name="information_about_the_deposit">Информация о вкладе</string>
    <string name="pass_check">Пароль должен содержать хотя бы одну строчную букву, прописную букву, специальный символ и цифру и иметь длину не менее 8</string>
    <string name="new_password">Новый пароль</string>
    <string name="empty_credit_message">Оформите кредит не выходя из дома.</string>
</resources>