<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/handle"
        android:layout_width="36dp"
        android:layout_height="4dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_dialog_handle"
        tools:ignore="ContentDescription" />

    <uz.fido.utils.view.custom_text_view.TextViewMedium
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:textSize="16dp"
        android:layout_marginTop="6dp"
        android:gravity="center"
        android:text="@string/weekly"
        android:textColor="@color/mainTextColor"
        android:layout_height="wrap_content"/>

    <uz.fido.utils.view.custom_text_view.TextViewSemiBold
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textSize="18dp"
        android:visibility="gone" />

   <uz.fido.utils.view.custom_text_view.TextViewRegular
       android:id="@+id/monday"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:textSize="14dp"
       android:gravity="center_horizontal"
       android:layout_marginTop="8dp"
       android:paddingVertical="8dp"
       android:paddingStart="16dp"
       android:text="@string/monday"/>

    <uz.fido.utils.view.custom_text_view.TextViewRegular
        android:id="@+id/tuesday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14dp"
        android:gravity="center_horizontal"
        android:paddingVertical="8dp"
        android:paddingStart="16dp"
        android:text="@string/tuesday"/>

    <uz.fido.utils.view.custom_text_view.TextViewRegular
        android:id="@+id/wednesday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14dp"
        android:gravity="center_horizontal"

        android:paddingVertical="8dp"
        android:paddingStart="16dp"
        android:text="@string/wednesday"/>

    <uz.fido.utils.view.custom_text_view.TextViewRegular
        android:id="@+id/thursday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14dp"
        android:gravity="center_horizontal"

        android:paddingVertical="8dp"
        android:paddingStart="16dp"
        android:text="@string/thursday"/>


    <uz.fido.utils.view.custom_text_view.TextViewRegular
        android:id="@+id/friday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14dp"
        android:gravity="center_horizontal"

        android:paddingVertical="8dp"
        android:paddingStart="16dp"
        android:text="@string/friday"/>

    <uz.fido.utils.view.custom_text_view.TextViewRegular
        android:id="@+id/saturday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14dp"
        android:gravity="center_horizontal"

        android:paddingVertical="8dp"
        android:paddingStart="16dp"
        android:text="@string/saturday"/>


    <uz.fido.utils.view.custom_text_view.TextViewRegular
        android:id="@+id/sunday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14dp"
        android:gravity="center_horizontal"

        android:paddingVertical="8dp"
        android:paddingStart="16dp"
        android:text="@string/sunday"
        android:layout_marginBottom="16dp"/>
</androidx.appcompat.widget.LinearLayoutCompat>
