<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/father_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/handle"
        android:layout_width="36dp"
        android:layout_height="4dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_dialog_handle"
        tools:ignore="ContentDescription" />

    <uz.fido.utils.view.custom_text_view.TextViewRegular
        android:id="@+id/month_6"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16sp"
        android:gravity="center|start"
        android:text="@string/month_6"
        android:textColor="@color/mainTextColor"
        android:textSize="16sp" />

    <uz.fido.utils.view.custom_text_view.TextViewRegular
        android:id="@+id/month_12"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="16sp"
        android:layout_marginEnd="16sp"
        android:gravity="center|start"
        android:text="@string/month_12"
        android:textColor="@color/mainTextColor"
        android:textSize="16sp" />

    <uz.fido.utils.view.custom_text_view.TextViewRegular
        android:id="@+id/month_18"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="16sp"
        android:layout_marginEnd="16sp"
        android:gravity="center|start"
        android:text="@string/month_18"
        android:textColor="@color/mainTextColor"
        android:textSize="16sp" />

    <uz.fido.utils.view.custom_text_view.TextViewRegular
        android:id="@+id/month_24"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="16sp"
        android:layout_marginEnd="16sp"
        android:gravity="center|start"
        android:text="@string/month_24"
        android:textColor="@color/mainTextColor"
        android:textSize="16sp" />

    <uz.fido.utils.view.custom_text_view.TextViewRegular
        android:id="@+id/unlimited"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="16sp"
        android:layout_marginEnd="16sp"
        android:gravity="center|start"
        android:text="@string/unlimited"
        android:textColor="@color/mainTextColor"
        android:textSize="16sp" />

    <uz.fido.utils.view.custom_text_view.TextViewRegular
        android:id="@+id/other_term"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="16sp"
        android:layout_marginEnd="16sp"
        android:gravity="center|start"
        android:text="@string/custom_term"
        android:textColor="@color/mainTextColor"
        android:textSize="16sp" />


</androidx.appcompat.widget.LinearLayoutCompat>