<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/handle"
        android:layout_width="36dp"
        android:layout_height="4dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_dialog_handle"
        tools:ignore="ContentDescription" />

    <uz.fido.utils.view.custom_text_view.TextViewMedium
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="6dp"
        android:gravity="center"
        android:text="@string/deposit"
        android:textColor="@color/mainTextColor"
        android:textSize="16dp" />

    <uz.fido.utils.view.custom_text_view.TextViewMedium
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/ic_edit_house"
        android:drawablePadding="16dp"
        android:paddingVertical="16dp"
        android:paddingStart="16dp"
        android:text="@string/deposit_edit"
        android:textColor="@color/mainTextColor"
        android:textSize="16dp" />

    <uz.fido.utils.view.custom_text_view.TextViewMedium
        android:id="@+id/with_draw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/percentage_black"
        android:drawablePadding="16dp"
        android:paddingVertical="16dp"
        android:paddingStart="16dp"
        android:text="@string/percents"
        android:textColor="@color/mainTextColor"
        android:textSize="16dp" />

    <uz.fido.utils.view.custom_text_view.TextViewMedium
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_info_client_deposit"
        android:drawablePadding="16dp"
        android:paddingVertical="16dp"
        android:paddingStart="16dp"
        android:text="@string/information_about_the_deposit"
        android:textColor="@color/mainTextColor"
        android:textSize="16dp" />

    <uz.fido.utils.view.custom_text_view.TextViewMedium
        android:id="@+id/ealry_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/close"
        android:drawablePadding="16dp"
        android:paddingVertical="16dp"
        android:paddingStart="16dp"
        android:text="@string/early_closing_of_the_deposit"
        android:textColor="@color/mainTextColor"
        android:textSize="16dp" />

    <uz.fido.utils.view.custom_text_view.TextViewMedium
        android:id="@+id/close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:drawableStart="@drawable/close"
        android:drawablePadding="16dp"
        android:drawableTint="@color/brandRedColor"
        android:paddingVertical="16dp"
        android:paddingStart="16dp"
        android:text="@string/close_deposit"
        android:textColor="@color/brandRedColor"
        android:textSize="16dp" />

</androidx.appcompat.widget.LinearLayoutCompat>
