<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/father_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:gravity="center"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/handle"
        android:layout_width="36dp"
        android:layout_height="4dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_dialog_handle"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/cause_1"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="24sp"
        android:background="?selectableItemBackground"
        android:gravity="center|start"
        android:paddingStart="16sp"
        android:paddingEnd="16sp"
        android:text="@string/card_damaged"
        android:textColor="@color/mainTextColor"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/cause_2"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="?selectableItemBackground"
        android:gravity="center|start"
        android:paddingStart="16sp"
        android:paddingEnd="16sp"
        android:text="@string/name_changed"
        android:textColor="@color/mainTextColor"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/cause_3"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="?selectableItemBackground"
        android:gravity="center|start"
        android:paddingStart="16sp"
        android:paddingEnd="16sp"
        android:text="@string/card_lost"
        android:textColor="@color/mainTextColor"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/cause_4"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="?selectableItemBackground"
        android:gravity="center|start"
        android:paddingStart="16sp"
        android:paddingEnd="16sp"
        android:text="@string/card_expired"
        android:textColor="@color/mainTextColor"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/cause_5"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginBottom="24sp"
        android:background="?selectableItemBackground"
        android:gravity="center|start"
        android:paddingStart="16sp"
        android:paddingEnd="16sp"
        android:text="@string/other_cause"
        android:textColor="@color/mainTextColor"
        android:textSize="15sp" />

</androidx.appcompat.widget.LinearLayoutCompat>