<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <uz.fido.utils.view.custom_app_bar.AppBarWithSubtitle
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:subtitle="@string/create_password_description"
        app:title="@string/create_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        style="@style/EditTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:hint="@string/new_password"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:maxLength="25"
            android:theme="@style/DefaultEditTextTheme" />

    </com.google.android.material.textfield.TextInputLayout>

    <uz.fido.utils.view.custom_text_view.TextViewRegular
        android:id="@+id/passdescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="4dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/pass_description"
        android:textColor="@color/hintColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/repeat_password_layout"
        style="@style/EditTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/repeat_password"
        app:layout_constraintTop_toBottomOf="@id/passdescription"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_repeat_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:maxLength="25"
            android:theme="@style/DefaultEditTextTheme" />

    </com.google.android.material.textfield.TextInputLayout>

    <uz.fido.utils.view.custom_text_view.TextViewRegular
        android:id="@+id/pass_dont_match"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/pass_dont_match"
        android:textColor="@color/brandRedColor"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/repeat_password_layout" />

    <uz.fido.utils.view.custom_text_view.TextViewRegular
        android:id="@+id/pass_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/pass_check"
        android:textColor="@color/brandRedColor"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/repeat_password_layout" />

    <uz.fido.utils.view.custom_circle_button.CustomFAButton
        android:id="@+id/btn_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>