<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <uz.fido.utils.view.custom_app_bar.MainAppBar
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/whiteColor"
        android:outlineSpotShadowColor="@color/appBarShadowColor"
        android:translationZ="@dimen/elevation_8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:s_title="@string/my_deposits" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_client_deposits"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingTop="8dp"
        android:paddingBottom="84dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar"
        tool:listitem="@layout/item_home_deposits" />

    <uz.fido.utils.view.custom_empty_view.EmptyView
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/backgroundColor"
        android:visibility="gone"
        app:ev_desc="@string/you_can_open_deposit_by_clicking"
        app:ev_title="@string/no_deposits"
        app:layout_constraintBottom_toTopOf="@id/open_deposit"
        app:layout_constraintTop_toBottomOf="@id/appbar" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/open_deposit"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:text="@string/open_deposit"
        android:textColor="@color/frozenWhite"
        android:textSize="16sp"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>