<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <uz.fido.utils.view.custom_app_bar.MainAppBar
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/whiteColor"
        android:outlineSpotShadowColor="@color/appBarShadowColor"
        android:translationZ="@dimen/elevation_8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:s_title="@string/my_credits" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_client_credits"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingTop="8dp"
        android:paddingBottom="84dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        tools:listitem="@layout/item_home_credits" />

    <uz.fido.utils.view.custom_empty_view.EmptyView
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/backgroundColor"
        android:visibility="gone"
        app:ev_desc="@string/empty_credit_message"
        app:ev_title="@string/no_credits"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/get_loan"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_margin="16dp"
        android:text="@string/get_credit"
        android:textColor="@color/frozenWhite"
        android:textSize="16dp"
        android:visibility="gone"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>